Final edits, fixed javascript

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
 
         <div id="projects">
             <h2>Projects</h2>
+            <p>(Click to see more)</p>
             <ul>
                 <li id="project-1" class="project">
                     <img alt="Kronk and Bucky" src="https://pbs.twimg.com/media/EV_C9xTWsAk_ggO.jpg">
