--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -64,6 +64,6 @@
 
     </main>
   
-  <script src="portfolio.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
